fix config save, but tests fail and VineFlower does not work